<resources>

	<string name="app_name">Inspirational People</string>
	<string name="app_id">1505051489734608</string>

	<string name="action_settings">Settings</string>
	<string name="title_settings">Settings</string>
	<string name="title_edit_person">Person</string>
	<string name="title_import">Import inspirations</string>
	<string name="title_add_person">Add person</string>
	<string name="title_add_inspiration">Add inspiration</string>
	<string name="title_edit_inspiration">Edit inspiration</string>
	<string name="title_crop_image">Crop image</string>
	
	<string name="menu_settings">Settings</string>
	<string name="menu_backup">Export inspirations</string>
	<string name="menu_restore">Import inspirations</string>
	<string name="menu_delete_person">Delete</string>
	<string name="menu_about">About</string>
	
	<string name="add_person">Add person</string>
	<string name="import_inspirations">Import</string>
	<string name="delete_person">Delete contact</string>
	<string name="add_inspiration">Add inspiration</string>
	<string name="enter_password">Enter the password</string>
	<string name="bt_backup">Backup</string>
	<string name="bt_restore">Restore</string>
	<string name="bt_cancel">Cancel</string>
	<string name="bt_save">Save</string>
	<string name="entrar">Entrar</string>
	<string name="change_password">Change password</string>
	<string name="current_password">Current password</string>
	<string name="new_password">New password</string>
	<string name="confirm_new_password">Confirm new password</string>
	<string name="data_manager">Data manager</string>
	<string name="person_name">Name</string>	
	<string name="person_photo">Picture</string>
	<string name="person_photo_description">Person\'s photo</string>

	<string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>

    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="no_inspiration">No inspiration.</string>
	<string name="add_new_person">Add a new person.</string>
	
	<string name="edit_inspiration">Edit the inspiration</string>
	<string name="delete_inspiration_title">Delete inspiration</string>
	<string name="delete_inspiration_question">Do you want to delete this inspiration?</string>
	<string name="inspiration">inspiration</string>
	<string name="inspirations">inspirations</string>
	<string name="data_not_saved_title">Data not saved</string>
	<string name="data_not_saved_question">Do you want to save the data before exit?</string>
	<string name="save_data_question">"Do you want to save the data?</string>
	<string name="wrong_password">Wrong password!</string>
	<string name="delete_contact_title">Delete contact</string>	
	<string name="delete_contact_question">Do you want to delete this contact? All data about it will be lost!</string>
    <string name="new_inspiration_question">What is the new inspiration?</string>
    <string name="enter_the_inspiration">You need inform the inspiration</string>
    <string name="password_changed">Password changed!</string>
    <string name="password_different">Passwords are different!</string>
    <string name="password_incorrect">Password is incorrect!</string>
    <string name="send_backup">Send the backup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_field_name">You need to inform the person\'s name</string>
    <string name="empty_field_inspiration">The Inspiration was not informed</string>
    <string name="image_not_created">Error: the image was not created</string>
    <string name="backup_completed">Data exported successfully!</string>
    <string name="file_not_found">File not found</string>
    <string name="backup_not_found">The backup file was not found!</string>
    <string name="no_data_backup">No data to export!</string>
    <string name="no_data_to_import">No new data to import!</string>
    <string name="name_registered">This name is already registered!</string>
    <string name="date_backup">Last backup at:</string>
	<string name="overwrite_backup_file_question">The last backup will be overwritten. Do you want to continue?</string>
    
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="success">Success</string>

    <string name="version_beta">Beta version</string>
    <string name="version">Version</string>
    <string name="version_number" translatable="false">2.0.0</string>
    <string name="translation">Translation by</string>

	<string name="send_backup_email">You can send it to email as well...</string>
	<string name="loading">Loading...</string>
	<string name="importing">Importing</string>
	<string name="please_wait">Please wait...</string>

	<string name="person_details" translatable="false">person_details</string>
	<string name="permission_denied">Permission denied. Cannot access media.</string>

</resources>