<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

	<include
		android:id="@+id/tool_bar"
		layout="@layout/tool_bar"
		></include>

    <LinearLayout
        android:id="@+id/buttons_edit_person"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:weightSum="1"
		android:layout_alignParentBottom="true"
		>     
	     <Button
	          android:id="@+id/bt_edit_cancel" 
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"       
	          android:background="@drawable/button_background"
	          android:text="@string/bt_cancel"
	          android:textColor="#222"
	          android:textSize="14sp"
	          android:padding="15dp"
	          android:layout_margin="12dp"
	          android:layout_weight="0.5"/>
	    <Button
	          android:id="@+id/bt_edit_save" 
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"            
	          android:background="@drawable/button_background"
	          android:text="@string/bt_save"
	          android:textColor="#222"
	          android:textSize="14sp"
	          android:padding="15dp"
	          android:layout_margin="12dp"
	          android:layout_weight="0.5"/>			    
	 </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons_edit_person">

        <LinearLayout
            android:id="@+id/layout_edit_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:orientation="vertical" >
            
            <TextView
		         android:id="@+id/tv_person_name"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:text="@string/person_name"
		         android:textColor="#333"
		        />
		    <EditText
		        android:id="@+id/et_person_name"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:textColor="#333"
		        />
		  
		    <TextView
		         android:id="@+id/tv_person_photo"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:text="@string/person_photo"
		         android:textColor="#333"
		        />
		    
		    <ImageView
		        android:id="@+id/person_photo"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:maxHeight="50dp"
		        android:adjustViewBounds="true"
		        android:layout_marginBottom="10dp"
		        android:contentDescription="@string/person_photo_description"/>		    		    
		            
        </LinearLayout>
    </ScrollView>    
    
</RelativeLayout>
