<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

	<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/primary"
		android:layout_alignParentTop="true"
		android:theme="@style/ThemeOverlay.AppCompat.Dark"
		android:elevation="6dp">

	</android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_below="@+id/toolbar"
		android:layout_marginTop="@dimen/default_space"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/layout_add_person"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/tv_add_person_photo"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/person_photo"
					android:textColor="#333"
					/>

				<ImageView
					android:id="@+id/add_person_photo"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:maxHeight="128dp"
					android:adjustViewBounds="true"
					android:layout_marginBottom="10dp"
					android:contentDescription="@string/person_photo_description"/>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_vertical_margin">

					<EditText
						android:id="@+id/et_add_person_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/person_name"/>

				</android.support.design.widget.TextInputLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/buttons_add_person"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center_horizontal"
				android:weightSum="1"
				android:layout_alignParentBottom="true"
				>
				<Button
					android:id="@+id/bt_add_cancel"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/bt_cancel"
					android:textColor="#fff"
					android:textSize="14sp"
					android:layout_margin="12dp"
					android:padding="15dp"
					android:layout_weight="0.5"
					android:theme="@style/MyButton"/>
				<Button
					android:id="@+id/bt_add_save"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/bt_save"
					android:textColor="#fff"
					android:textSize="14sp"
					android:padding="15dp"
					android:layout_margin="12dp"
					android:layout_weight="0.5"
					android:theme="@style/MyButton"/>
			</LinearLayout>
		</LinearLayout>

    </ScrollView>    
    
</RelativeLayout>
