<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

	<include
		android:id="@+id/tool_bar"
		layout="@layout/tool_bar"
		></include>

    <ScrollView
        android:id="@+id/settings_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_marginTop="@dimen/default_space"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
					<TextView
						 android:id="@+id/tv_password"
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:text="@string/current_password"
						 android:textColor="#333"
						/>
					<EditText
						android:id="@+id/et_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPassword"
						android:textColor="#333"
						/>

					<TextView
						 android:id="@+id/tv_new_password"
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:text="@string/new_password"
						 android:textColor="#333"
						/>
					<EditText
						android:id="@+id/et_new_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPassword"
						android:textColor="#333"
						/>


					<TextView
						 android:id="@+id/tv_confirm_new_password"
						 android:layout_width="match_parent"
						 android:layout_height="wrap_content"
						 android:text="@string/confirm_new_password"
						 android:textColor="#333"
						/>
					 <EditText
						android:id="@+id/et_confirm_new_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPassword"
						android:textColor="#333"
						/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/settings_buttons"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center_horizontal"
				android:weightSum="1"
				android:layout_alignParentBottom="true"
				>
				<Button
					android:id="@+id/bt_cancel"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/bt_cancel"
					android:textColor="#fff"
					android:textSize="14sp"
					android:layout_margin="12dp"
					android:layout_weight="0.5"
					android:theme="@style/MyButton"/>
				<Button
					android:id="@+id/bt_save"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/bt_save"
					android:textColor="#fff"
					android:textSize="14sp"
					android:padding="15dp"
					android:layout_margin="12dp"
					android:layout_weight="0.5"
					android:theme="@style/MyButton"/>
			</LinearLayout>

		</LinearLayout>

    </ScrollView>
         
     	       
</RelativeLayout>
