<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:elevation="6dp">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container_last_modified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:layout_below="@+id/toolbar">
	    <TextView
	        android:id="@+id/date_backup"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/image_text_person_name"
			android:layout_marginLeft="10dp"
			android:gravity="center"
	        />
    </LinearLayout>

    <TextView
        android:id="@+id/loading_import_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:gravity="center"
        android:visibility="visible"
        tools:visibility="gone"
        android:textColor="@color/accent"
        android:textStyle="italic|bold"
        android:text="@string/loading"/>

    <LinearLayout
        android:id="@+id/nothing_to_import"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="vertical">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:src="@drawable/info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_space"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:text="@string/no_data_to_import"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/import_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/default_space"
        android:layout_below="@+id/container_last_modified">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_import"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons_add_inspiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:weightSum="1"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                >
                <Button
                    android:id="@+id/btn_cancel_import_inspirations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_cancel"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:layout_margin="12dp"
                    android:padding="15dp"
                    android:layout_weight="0.5"
                    android:theme="@style/MyButton"/>
                <Button
                    android:id="@+id/btn_import_inspirations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/import_inspirations"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:padding="15dp"
                    android:layout_margin="12dp"
                    android:layout_weight="0.5"
                    android:theme="@style/MyButton"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>